rust/kcl-lib/tests/face_api_fillet_chamfer_tags_and_edge_refs/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing face_api_fillet_chamfer_tags_and_edge_refs.kcl
---
KCL Semantic error

  × semantic: You must provide either 'tags' or 'edges' to fillet edges, not
  │ both
    ╭─[14:6]
 13 │   |> extrude(length = 5, tagEnd = $capEnd001)
 14 │   |> fillet(radius = 1, tags = [e1], edges = [{ sideFaces = [e1, capEnd001] }])
    ·      ─────────────────────────────────────┬────────────────────────────────────┬
    ·                                           ╰── tests/face_api_fillet_chamfer_tags_and_edge_refs/input.kcl
    ·                                           ╰── tests/face_api_fillet_chamfer_tags_and_edge_refs/input.kcl
 15 │ yo2 = startProfile(body, at = [15, 0])
    ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: You must provide either 'tags' or 'edges' to fillet edges,
        │ not both
          ╭─[14:6]
       13 │   |> extrude(length = 5, tagEnd = $capEnd001)
       14 │   |> fillet(radius = 1, tags = [e1], edges = [{ sideFaces = [e1,
      capEnd001] }])
          ·
      ─────────────────────────────────────┬──────────────────────────────────
      ──
          ·                                           ╰── tests/
      face_api_fillet_chamfer_tags_and_edge_refs/input.kcl
       15 │ yo2 = startProfile(body, at = [15, 0])
          ╰────
